# Planning

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  Processing.cpp  main.cpp  mainwindow.cpp  mainwindow.h
include/: Processing.h
path_processor/: CMakeLists.txt  Dijkstra.cpp  Path.cpp  PathProcessor.cpp
path_processor/include/: Dijkstra.h  Path.h  PathProcessor.h  config.h
visualizer/: CMakeLists.txt
